<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/taskbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:backgroundTint="#76A8B9"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/greet_user"
        android:textColor="#2E5A88"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/choose_gpx_file"
        android:layout_width="209dp"
        android:layout_height="60dp"
        android:layout_marginTop="564dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="107dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/choose_gpx_file"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_below"
        android:layout_width="350dp"
        android:layout_height="93dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="676dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="22dp"
        android:padding="8dp"
        android:text="@string/retard_proof_text"
        android:textColor="#808080"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/blue_background"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/blue_background_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="223dp"
        android:layout_height="226dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="94dp"
        android:scaleType="centerInside"
        android:src="@drawable/blue_man_running_no_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
